--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -30,10 +30,43 @@
         "node-red-node-suncalc": "*",
         "node-red-node-random": "*",
 
-	"node-red-admin": "*",
         "node-red-dashboard": "*",
 	"node-red-node-sqlite": "*",
-        "node-red-contrib-startup-trigger": "*"
+        "node-red-contrib-startup-trigger": "*",
+
+	"node-red-contrib-chatbot": "*",
+	"node-red-contrib-azure-table-storage": "*",
+        "node-red-contrib-cognitive-services": "*",
+        "node-red-contrib-exit": "*",
+        "node-red-contrib-persist": "*",
+        "node-red-contrib-startup-trigger": "*",
+        "node-red-contrib-viseo-bot-message": "*",
+        "node-red-contrib-viseo-botbuilder": "*",
+        "node-red-contrib-viseo-credentials": "*",
+        "node-red-contrib-viseo-file": "*",
+        "node-red-contrib-viseo-help": "*",
+        "node-red-contrib-viseo-jimp": "*",
+        "node-red-contrib-viseo-log": "~0.1",
+        "node-red-contrib-viseo-loop": "*",
+        "node-red-contrib-viseo-ms-graph": "*",
+        "node-red-contrib-viseo-ms-oxford": "*",
+        "node-red-contrib-viseo-nedb": "*",
+        "node-red-contrib-viseo-nosql": "*",
+        "node-red-contrib-viseo-nosql-manager": "*",
+        "node-red-contrib-viseo-qrcode": "*",
+        "node-red-contrib-viseo-random": "*",
+        "node-red-contrib-viseo-repeat": "*",
+        "node-red-contrib-viseo-sensit": "*",
+        "node-red-contrib-viseo-socketio": "*",
+        "node-red-contrib-viseo-soundex": "*",
+        "node-red-contrib-viseo-tokenizer": "*",
+        "node-red-viseo-bot-manager": "*",
+        "node-red-viseo-helper": "*",
+        "node-red-viseo-middleware": "*",
+        "node-red-viseo-storage-plugin": "*",
+        "uuid": "*",
+        "xmldom": "*",
+        "xpath": "*"
     },
     "engines": {
         "node": "10.*.*"
