--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -34,7 +34,6 @@
 	"node-red-node-sqlite": "*",
         "node-red-contrib-startup-trigger": "*",
 
-	"node-red-contrib-chatbot": "*",
 	"node-red-contrib-azure-table-storage": "*",
         "node-red-contrib-cognitive-services": "*",
         "node-red-contrib-exit": "*",
@@ -64,6 +63,9 @@
         "node-red-viseo-helper": "*",
         "node-red-viseo-middleware": "*",
         "node-red-viseo-storage-plugin": "*"
+    },
+    "optionalDependencies": {
+	"node-red-contrib-chatbot": "*",
     },
     "engines": {
         "node": "10.*.*"
