--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -65,7 +65,7 @@
         "node-red-viseo-storage-plugin": "*"
     },
     "optionalDependencies": {
-	"node-red-contrib-chatbot": "*",
+	"node-red-contrib-chatbot": "*"
     },
     "engines": {
         "node": "10.*.*"
