first pass at setting uid/gid

--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -11,11 +11,6 @@ RUN mkdir -p /usr/src/node-red \
 
 WORKDIR /usr/src/node-red
 
-# Add node-red user so we aren't running as root.
-RUN adduser -h /usr/src/node-red -D -H node-red \
- && chown -R node-red:node-red /data \
- && chown -R node-red:node-red /usr/src/node-red
-
 # package.json contains Node-RED NPM module and node dependencies
 COPY ./package.json /usr/src/node-red/
 
@@ -36,8 +31,6 @@ RUN apk add --no-cache --virtual .build-deps \
  && rm -rf /usr/local/share/.cache \
  && apk del .build-deps
 
-USER node-red
-
 # User configuration directory volume
 EXPOSE 1880
 
@@ -45,4 +38,11 @@ EXPOSE 1880
 ENV FLOWS=flows.json
 ENV NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules
 
-CMD ["npm", "start", "--", "--userDir", "/data"]
+# Allow user to set uid/gid for Docker process
+ENV PGID=1000
+ENV PUID=1000
+
+# Add our minimalist init script
+ADD ./init.sh /init
+
+CMD ["/init"]
