--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -13,6 +13,8 @@ WORKDIR /usr/src/node-red
 
 # package.json contains Node-RED NPM module and node dependencies
 COPY ./package.json /usr/src/node-red/
+# Add our minimalist init script
+ADD ./init.sh /init
 
 # This image includes the build tools but removes them after installing modules
 RUN apk add --no-cache --virtual .build-deps \
@@ -29,7 +31,8 @@ RUN apk add --no-cache --virtual .build-deps \
     CFLAGS="-Wno-error=class-memaccess -Wno-error=ignored-qualifiers -Wno-error=stringop-truncation" \
     yarn install \
  && rm -rf /usr/local/share/.cache \
- && apk del .build-deps
+ && apk del .build-deps \
+ && chmod +x /init
 
 # User configuration directory volume
 EXPOSE 1880
@@ -41,8 +44,5 @@ ENV NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules
 # Allow user to set uid/gid for Docker process
 ENV PGID=1000
 ENV PUID=1000
-
-# Add our minimalist init script
-ADD ./init.sh /init
 
 CMD ["/init"]
