--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -8,6 +8,7 @@ RUN mkdir -p /usr/src/node-red \
  && mkdir /data \
  && apk add --no-cache \
     git \
+    sudo \
     shadow
 
 WORKDIR /usr/src/node-red
