add more automation packages

--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "node-red-insightful",
-    "version": "1.0.0",
+    "name": "node-red-insightful-automation",
+    "version": "1.0.3",
     "description": "A visual tool for wiring the Internet of Things",
     "homepage": "http://nodered.org",
     "license": "Apache-2.0",
@@ -24,24 +24,36 @@
         }
     ],
     "dependencies": {
-        "node-red": "1.0.3",
-        "node-red-node-msgpack": "*",
-        "node-red-node-base64": "*",
-        "node-red-node-suncalc": "*",
-        "node-red-node-random": "*",
-
-        "node-red-dashboard": "*",
-	"node-red-node-sqlite": "*",
-	"node-red-contrib-startup-trigger": "*",
-
-	"node-red-node-wol": "*",
-	"node-red-node-prowl": "*",
-	"node-red-contrib-broadlink": "*",
-	"node-red-contrib-homekit-bridged": "*",
-	"node-red-contrib-light-scheduler": "*",
-	"node-red-contrib-lgtv": "*",
-	"node-red-contrib-meobox": "*",
-	"node-red-contrib-wemo-emulator": "*"
+        "node-red-admin": "0.1.5",
+        "node-red-contrib-advanced-ping": "1.2.0",
+        "node-red-contrib-alexa-local": "0.3.24",
+        "node-red-contrib-broadlink-control": "1.0.6",
+        "node-red-contrib-cast": "0.2.11",
+        "node-red-contrib-homebridge-automation": "0.0.54",
+        "node-red-contrib-homekit-bridged": "0.8.0",
+        "node-red-contrib-httpauth": "1.0.12",
+        "node-red-contrib-inotify": "1.1.0",
+        "node-red-contrib-lgtv": "1.1.0",
+        "node-red-contrib-light-scheduler": "0.0.15",
+        "node-red-contrib-meobox": "1.0.0",
+        "node-red-contrib-moment": "3.0.3",
+        "node-red-contrib-msg-speed": "0.0.5",
+        "node-red-contrib-persist": "1.0.3",
+        "node-red-contrib-redis": "1.3.1",
+        "node-red-contrib-ssdp-discover": "0.0.2",
+        "node-red-contrib-wemo-emulator": "0.6.0",
+        "node-red-dashboard": "2.18.0",
+        "node-red-node-base64": "0.2.0",
+        "node-red-node-daemon": "0.0.25",
+        "node-red-node-discovery": "0.0.21",
+        "node-red-node-feedparser": "0.1.14",
+        "node-red-node-msgpack": "1.2.0",
+        "node-red-node-prowl": "0.0.9",
+        "node-red-node-smooth": "0.1.2",
+        "node-red-node-sqlite": "0.4.1",
+        "node-red-node-ui-table": "0.1.5",
+        "node-red-node-wol": "0.0.12",
+        "node-red": "1.0.3"
     },
     "engines": {
         "node": "10.*.*"
