--- a/tags/base/package.json
+++ b/tags/base/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "node-red-insightful",
-    "version": "1.0.0",
+    "name": "node-red-insightful-base",
+    "version": "1.0.3",
     "description": "A visual tool for wiring the Internet of Things",
     "homepage": "http://nodered.org",
     "license": "Apache-2.0",
@@ -25,10 +25,7 @@
     ],
     "dependencies": {
         "node-red": "1.0.3",
-        "node-red-node-msgpack": "*",
         "node-red-node-base64": "*",
-        "node-red-node-suncalc": "*",
-        "node-red-node-random": "*"
     },
     "engines": {
         "node": "10.*.*"
