--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -7,7 +7,6 @@ FROM ${BASE}
 RUN mkdir -p /usr/src/node-red \
  && mkdir /data \
  && apk add --no-cache \
-    avahi \
     git \
     sudo \
     shadow \
@@ -24,6 +23,7 @@ ADD ./init.sh /init
 RUN apk add --no-cache --virtual .build-deps \
         avahi-dev \
         avahi-compat-libdns_sd \
+        inotify-tools-dev \
         binutils-gold \
         curl \
         g++ \
