--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -10,6 +10,8 @@ RUN mkdir -p /usr/src/node-red \
     git \
     sudo \
     shadow \
+    iputils \
+    curl \
     tzdata
 
 WORKDIR /usr/src/node-red
@@ -39,15 +41,23 @@ RUN apk add --no-cache --virtual .build-deps \
  && apk del .build-deps \
  && chmod +x /init
 
-# User configuration directory volume
-EXPOSE 1880
+USER node
 
 # Environment variable holding file path for flows configuration
 ENV FLOWS=flows.json
 ENV NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules
 
+# User configuration directory volume
+VOLUME ["/data"]
+
+# Expose the listening port of node-red
+EXPOSE 1880
+
 # Allow user to set uid/gid for Docker process
 ENV PGID=1000
 ENV PUID=1000
 
-CMD ["/init"]
+# Add a healthcheck (default every 30 secs)
+HEALTHCHECK CMD curl http://localhost:1880/ || exit 1
+
+ENTRYPOINT ["/init"]
