--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -25,39 +25,75 @@
     ],
     "dependencies": {
          "node-red": "1.0.5",
-         "node-red-node-msgpack": "*",
-         "node-red-node-base64": "*",
-         "node-red-node-suncalc": "*",
-         "node-red-node-random": "*",
-         "node-red-dashboard": "*",
-         "node-red-node-sqlite": "*",
-         "node-red-contrib-startup-trigger": "*",
-         "node-red-contrib-cognitive-services": "*",
-         "node-red-contrib-exit": "*",
-         "node-red-contrib-viseo-bot-message": "*",
-         "node-red-contrib-viseo-botbuilder": "*",		
-         "node-red-contrib-viseo-credentials": "*",		
-         "node-red-contrib-viseo-file": "*",		
-         "node-red-contrib-viseo-help": "*",		
-         "node-red-contrib-viseo-jimp": "*",		
-         "node-red-contrib-viseo-log": "~0.6",		
-         "node-red-contrib-viseo-loop": "*",		
-         "node-red-contrib-viseo-ms-graph": "*",		
-         "node-red-contrib-viseo-ms-oxford": "*",		
-         "node-red-contrib-viseo-nedb": "*",		
-         "node-red-contrib-viseo-nosql": "*",		
-         "node-red-contrib-viseo-nosql-manager": "*",		
-         "node-red-contrib-viseo-qrcode": "*",		
-         "node-red-contrib-viseo-random": "*",		
-         "node-red-contrib-viseo-repeat": "*",		
-         "node-red-contrib-viseo-sensit": "*",		
-         "node-red-contrib-viseo-socketio": "*",		
-         "node-red-contrib-viseo-soundex": "*",		
-         "node-red-contrib-viseo-tokenizer": "*",		
-         "node-red-viseo-bot-manager": "*",		
-         "node-red-viseo-helper": "*",		
-         "node-red-viseo-middleware": "*",		
-         "node-red-viseo-storage-plugin": "*"
+         "deep-extend": "^0.6.0",
+        "moment-timezone": "^0.5.11",
+        "uuid": "^3.1.0",
+        "xmldom": "^0.1.27",
+        "xpath": "^0.0.24",
+        "node-red-contrib-viseo-bot-message": "0.8.1",
+        "node-red-contrib-viseo-bot-socketio": "0.2.2",
+        "node-red-contrib-viseo-botbuilder": "1.0.0",
+        "node-red-contrib-viseo-credentials": "0.1.1",
+        "node-red-contrib-viseo-dialogflow": "1.0.1",
+        "node-red-contrib-viseo-directline": "0.0.1",
+        "node-red-contrib-viseo-facebook": "0.5.0",
+        "node-red-contrib-viseo-file": "0.3.1",
+        "node-red-contrib-viseo-file-operation": "~1.0.4",
+        "node-red-contrib-viseo-google-authentication": "0.1.1",
+        "node-red-contrib-viseo-google-spreadsheet": "~0.5.0",
+        "node-red-contrib-viseo-help": "2.0.0",
+        "node-red-contrib-viseo-loop": "0.4.0",
+        "node-red-contrib-viseo-mongodb": "0.5.0",
+        "node-red-contrib-viseo-mustache": "0.1.0",
+        "node-red-contrib-viseo-nedb": "0.4.0",
+        "node-red-contrib-viseo-nosql": "0.5.0",
+        "node-red-contrib-viseo-random": "0.4.0",
+        "node-red-contrib-viseo-repeat": "0.3.0",
+        "node-red-contrib-viseo-tokenizer": "0.3.0",
+        "node-red-viseo-bot-manager": "0.1.0",
+        "node-red-viseo-helper": "~0.3.2",
+        "node-red-viseo-middleware": "~0.2.3",
+        "node-red-viseo-storage-plugin": "~1.0.2"
+      },
+      "node-red-catalog": {
+        "node-red-contrib-viseo-airtable": "~0.1.3",
+        "node-red-contrib-viseo-amazon": "0.2.0",
+        "node-red-contrib-viseo-aws": "0.2.0",
+        "node-red-contrib-viseo-bear": "0.3.0",
+        "node-red-contrib-viseo-blink": "0.2.0",
+        "node-red-contrib-viseo-bot-wrapper": "0.1.0",
+        "node-red-contrib-viseo-chatbase": "0.2.0",
+        "node-red-contrib-viseo-ethjs": "0.2.0",
+        "node-red-contrib-viseo-ffmpeg": "0.3.0",
+        "node-red-contrib-viseo-google-actions": "0.2.0",
+        "node-red-contrib-viseo-google-maps": "0.2.0",
+        "node-red-contrib-viseo-google-speech": "0.4.0",
+        "node-red-contrib-viseo-google-youtube": "0.2.1",
+        "node-red-contrib-viseo-iadvize": "0.1.2",
+        "node-red-contrib-viseo-inbenta": "0.1.0",
+        "node-red-contrib-viseo-jimp": "0.3.1",
+        "node-red-contrib-viseo-log": "0.6.0",
+        "node-red-contrib-viseo-ms-authentication": "0.0.2",
+        "node-red-contrib-viseo-ms-decision": "0.1.0",
+        "node-red-contrib-viseo-ms-graph": "0.3.0",
+        "node-red-contrib-viseo-ms-language": "0.1.0",
+        "node-red-contrib-viseo-ms-search": "0.1.0",
+        "node-red-contrib-viseo-ms-speech": "0.2.0",
+        "node-red-contrib-viseo-ms-vision": "0.1.0",
+        "node-red-contrib-viseo-nlp-js": "0.1.0",
+        "node-red-contrib-viseo-qrcode": "0.3.0",
+        "node-red-contrib-viseo-recast": "0.2.0",
+        "node-red-contrib-viseo-salesforce": "0.2.5",
+        "node-red-contrib-viseo-sarah": "0.3.0",
+        "node-red-contrib-viseo-sensit": "0.1.1",
+        "node-red-contrib-viseo-soap": "0.1.0",
+        "node-red-contrib-viseo-socketio": "0.3.0",
+        "node-red-contrib-viseo-soundex": "0.2.0",
+        "node-red-contrib-viseo-sox": "0.1.0",
+        "node-red-contrib-viseo-trello": "0.4.0",
+        "node-red-contrib-viseo-wechat": "0.3.0",
+        "node-red-contrib-viseo-zendesk": "0.1.0"
+        },
     },
     "engines": {
         "node": "12.*.*"
