--- a/bundles/slim/Dockerfile
+++ b/bundles/slim/Dockerfile
@@ -39,11 +39,13 @@ RUN apk add --no-cache --virtual .build-deps \
     yarn install \
  && rm -rf /usr/local/share/.cache \
  && apk del .build-deps \
- && chmod +x /init
+ && chmod +x /init \
+ && npm config set prefix /data \
+ && yarn config set prefix /data
 
 # Environment variable holding file path for flows configuration
 ENV FLOWS=flows.json
-ENV NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules
+ENV NODE_PATH=/data/node_modules:/usr/src/node-red/node_modules
 
 # User configuration directory volume
 VOLUME ["/data"]
