--- a/tags/base/package.json
+++ b/tags/base/package.json
@@ -25,6 +25,7 @@
     ],
     "dependencies": {
         "node-red": "1.1.0",
+	"@node-red-contrib-themes/midnight-red": "1.4.0",
         "node-red-node-base64": "*"
     },
     "engines": {
