--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-insightful-automation",
-    "version": "1.1.3",
+    "version": "1.2.1",
     "description": "A visual tool for wiring the Internet of Things",
     "homepage": "http://nodered.org",
     "license": "Apache-2.0",
@@ -10,7 +10,9 @@
     },
     "main": "node_modules/node-red/red/red.js",
     "scripts": {
-        "start": "node $NODE_OPTIONS node_modules/node-red/red.js -v $FLOWS"
+        "start": "node $NODE_OPTIONS node_modules/node-red/red.js $FLOWS",
+        "debug": "node --inspect=0.0.0.0:9229 $NODE_OPTIONS node_modules/node-red/red.js $FLOWS",
+        "debug_brk": "node --inspect=0.0.0.0:9229 --inspect-brk $NODE_OPTIONS node_modules/node-red/red.js $FLOWS"
     },
     "contributors": [
         {
@@ -21,6 +23,9 @@
         },
         {
             "name": "James Thomas"
+        },
+        {
+            "name": "Raymond Mouthaan"
         }
     ],
     "dependencies": {
@@ -38,7 +43,7 @@
         "node-red-node-smooth": "0.1.2",
         "node-red-node-sqlite": "0.4.4",
         "node-red-node-ui-table": "0.3.6",
-	      "node-red-contrib-chatbot": "0.19.7",
+	    "node-red-contrib-chatbot": "0.19.7",
         "@node-red-contrib-themes/midnight-red": "1.4.5",
         "node-red": "1.2.1"
     },
