--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -46,6 +46,7 @@
         "node-red-contrib-redis": "1.3.8",
         "node-red-contrib-ssdp-discover": "0.0.2",
         "node-red-contrib-wemo-emulator": "1.0.1",
+	"node-red-contrib-zigbee2mqtt": "0.6.2",
         "node-red-dashboard": "2.23.5",
         "node-red-node-base64": "0.2.1",
         "node-red-node-daemon": "0.1.2",
