--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -47,7 +47,11 @@
         "node-red-contrib-ssdp-discover": "0.0.2",
         "node-red-contrib-wemo-emulator": "1.0.1",
         "node-red-contrib-zigbee2mqtt": "0.6.2",
-        "node-red-dashboard": "2.24.1",
+	"node-red-contrib-linux-memory": "0.8.1",
+	"node-red-contrib-linux-network-stats": "0.2.1",
+	"node-red-contrib-linux-diskio": "0.2.1",
+	"node-red-contrib-os": "0.1.7",
+        "node-red-dashboard": "2.24.2",
         "node-red-node-base64": "0.2.1",
         "node-red-node-daemon": "0.1.2",
         "node-red-node-discovery": "0.0.22",
