--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -34,6 +34,7 @@
         "node-red-contrib-amazon-echo": "0.1.10",
         "node-red-contrib-broadlink-control": "2.1.2",
         "node-red-contrib-cast": "0.2.17",
+        "node-red-contrib-cheerio-function":"1.0.0-rc.3",
         "node-red-contrib-homebridge-automation": "0.0.77",
         "node-red-contrib-homekit-bridged": "1.2.0",
         "node-red-contrib-httpauth": "1.0.12",
