--- a/tags/base/package.json
+++ b/tags/base/package.json
@@ -29,9 +29,16 @@
         }
     ],
     "dependencies": {
-        "node-red": "1.2.6",
 	    "@node-red-contrib-themes/midnight-red": "1.4.7",
-        "node-red-node-base64": "*"
+        "node-red-contrib-dashboard-bar-chart-data": "0.9.6",
+        "node-red-contrib-ui-artless-gauge": "0.3.4",
+        "node-red-contrib-ui-level": "0.1.39",
+        "node-red-dashboard": "2.26.0",
+        "node-red-node-base64": "0.2.1",
+        "node-red-node-sqlite": "0.5.0",
+        "node-red-node-ui-list": "0.3.4",
+        "node-red-node-ui-table": "0.3.10",
+        "node-red": "1.2.6"
     },
     "engines": {
         "node": "14.*.*"
