--- a/tags/bots/package.json
+++ b/tags/bots/package.json
@@ -29,23 +29,30 @@
         }
     ],
     "dependencies": {
+        "@node-red-contrib-themes/midnight-red": "1.4.7",
         "node-red-admin": "0.2.6",
+	    "node-red-contrib-chatbot": "0.19.7",
+        "node-red-contrib-cheerio-function": "1.0.0-rc.3",
+        "node-red-contrib-dashboard-bar-chart-data": "0.9.6",
+        "node-red-contrib-dir2files": "0.3.0",
+        "node-red-contrib-fs-ops": "1.5.0",
         "node-red-contrib-httpauth": "1.0.12",
         "node-red-contrib-moment": "4.0.0",
         "node-red-contrib-msg-speed": "1.0.0",
         "node-red-contrib-persist": "1.1.1",
         "node-red-contrib-redis": "1.3.8",
+        "node-red-contrib-ui-artless-gauge": "0.3.4",
+        "node-red-contrib-ui-level": "0.1.39",
+        "node-red-contrib-ui-state-trail": "0.3.1",
         "node-red-dashboard": "2.26.0",
         "node-red-node-base64": "0.2.1",
         "node-red-node-daemon": "0.1.2",
         "node-red-node-feedparser": "0.1.16",
-        "node-red-node-ui-list": "0.3.4",
         "node-red-node-smooth": "0.1.2",
-        "node-red-node-ui-table": "0.3.10",
         "node-red-node-sqlite": "0.5.0",      
-        "node-red-contrib-cheerio-function": "1.0.0-rc.3",
-	    "node-red-contrib-chatbot": "0.19.7",
-        "@node-red-contrib-themes/midnight-red": "1.4.7",
+        "node-red-node-ui-list": "0.3.4",
+        "node-red-node-ui-table": "0.3.10",
+        "node-red-node-ui-vega": "0.1.3",
         "node-red": "1.2.6"
     },
     "engines": {
