--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,24 @@
 version: 2
 updates:
 - package-ecosystem: npm
+  directory: "/bundles/slim"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+  reviewers:
+  - rcarmo
+  assignees:
+  - rcarmo
+- package-ecosystem: npm
+  directory: "/bundles/build"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+  reviewers:
+  - rcarmo
+  assignees:
+  - rcarmo
+- package-ecosystem: npm
   directory: "/tags/redbot"
   schedule:
     interval: daily
