--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -38,6 +38,7 @@
         "node-red-contrib-cheerio-function":"1.0.0-rc.5",
         "node-red-contrib-dashboard-bar-chart-data": "0.9.7",
         "node-red-contrib-dir2files": "0.3.0",
+        "node-red-contrib-feedparser-extended": "0.0.2",
         "node-red-contrib-fs-ops": "1.6.0",
         "node-red-contrib-homebridge-automation": "0.0.78",
         "node-red-contrib-homekit-bridged": "1.2.0",
@@ -53,6 +54,7 @@
         "node-red-contrib-os": "0.2.0",
         "node-red-contrib-persist": "1.1.1",
         "node-red-contrib-redis": "1.3.8",
+        "node-red-contrib-rss": "0.1.5",
         "node-red-contrib-ssdp-discover": "0.0.2",
         "node-red-contrib-ui-artless-gauge": "0.3.7",
         "node-red-contrib-ui-level": "0.1.40",
