--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -57,6 +57,7 @@
         "node-red-contrib-rss": "0.1.5",
         "node-red-contrib-ssdp-discover": "0.0.2",
         "node-red-contrib-ui-artless-gauge": "0.3.7",
+        "node-red-contrib-ui-joystick", "1.0.0",
         "node-red-contrib-ui-level": "0.1.40",
         "node-red-contrib-ui-state-trail": "0.3.1",
         "node-red-contrib-wemo-emulator": "1.0.1",
