--- a/tags/automation/package.json
+++ b/tags/automation/package.json
@@ -72,6 +72,7 @@
         "node-red-node-prowl": "0.0.10",
         "node-red-node-smooth": "0.1.2",
         "node-red-node-sqlite": "0.5.0",
+        "node-red-node-swagger": "0.1.9",
         "node-red-node-ui-list": "0.3.4",
         "node-red-node-ui-table": "0.3.10",
         "node-red-node-ui-vega": "0.1.3",
